<resources>
    <string name="app_name">Story Dicoding</string>
    <string name="menu_map">Maps</string>
    <string name="menu_setting">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="developer_name">Ervalsa Dwi Nanda</string>
    <string name="developer_email">ervalsananda@gmail.com</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="app_title">Story\nDicoding</string>
    <string name="content_illustration">Illustration</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="hint_email">Your email</string>
    <string name="title_show_password">Show Password</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_sign_up">SIGN UP</string>
    <string name="hint_name">Your name</string>
    <string name="title_fullname">Fullname</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet ipsum dolor lorem si dolor ipsum sit amet, dolor ipsum sit amet dolor</string>
    <string name="story_image_description" translatable="false">Story Image</string>
    <string name="story_date">Saturday, 23 March 2023</string>
    <string name="content_image_gallery" translatable="false">Image Gallery</string>
    <string name="content_image_camera" translatable="false">Image Camera</string>
    <string name="create_story">Create Story</string>
    <string name="placeholder_photo_upload">Placeholder Photo Upload</string>
    <string name="title_photo">Photo</string>
    <string name="title_description">Description</string>
    <string name="description_hint">Write your great story here</string>
    <string name="change_language">Change Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">Try Again</string>
    <string name="login_status_failed">Login Failed, please check again your email or password</string>
    <string name="login_status_success">Login Success, you will bring into Main Menu</string>
    <string name="register_status_failed">Failed to register account</string>
    <string name="alert_title">Congratulation!!!</string>
    <string name="alert_message">Thank you for registering, enjoy your day</string>
    <string name="alert_positive_button">Continue</string>
    <string name="share_location">Share Location?</string>
    <string name="not_getting_permission">Not getting permission</string>
    <string name="choose_image">Choose Image</string>
    <string name="enable_gps">Unable to get your location. Please enable your GPS</string>
    <string name="insert_description">Please insert description here!</string>
    <string name="add_story_success">Successfully created a story</string>
    <string name="add_story_failed">Failed to create story</string>
    <string name="picture_status">No pictures were taken/selected</string>
    <string name="detail_status">Failed to load detail data</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="application_language">Application Language</string>
    <string name="key_language" translatable="false">Language</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Want to exit?</string>
    <string name="logout_message">Really want to quit the app?</string>
    <string name="logout_negative">Nahh, just kidding</string>
    <string name="logout_positive">Nope, just let me out</string>
</resources>