<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:elevation="5dp"
    android:layout_margin="16dp"
    app:cardCornerRadius="14dp">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/example_story_image"
            android:contentDescription="@string/story_image_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:paddingTop="16dp"
            android:background="#4D000000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_description_story"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center|start"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_person"
                tools:text="@string/developer_name" />

            <TextView
                android:id="@+id/tv_description_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:maxLines="2"
                android:textColor="@color/white"
                tools:text="@string/lorem_ipsum" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>